kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes9.sem
// Disallow Lists with threaded parameter types for now
function listTextOut(): List<~TextOut> {
  []<~TextOut>
}
